(install
  (section bin)
  (package AppExe)
  (files
    Roboto-Regular.ttf
    kdt.svg.png
    qdt.svg.png
    rdt.svg.png
    bdt.svg.png
    ndt.svg.png
    pdt.svg.png
    fdt.svg.png
    gdt.svg.png
    mdt.svg.png
    edt.svg.png
    sdt.svg.png
    hdt.svg.png
    klt.svg.png
    qlt.svg.png
    rlt.svg.png
    blt.svg.png
    nlt.svg.png
    plt.svg.png
    flt.svg.png
    glt.svg.png
    mlt.svg.png
    elt.svg.png
    slt.svg.png
    hlt.svg.png
  )
)
