(library
  (name App)
  (wrapped false)
  (libraries
    bigarray
    Revery
  )
  (modules :standard \ AppExe)
  ; Just while I'm working on the API. This will get removed.
  (modules_without_implementation ChessImpl)
)
(executable
  (package AppExe)
  (name AppExe)
  (public_name AppExe)
  (libraries
    App
    Revery
  )
  (modules AppExe)
)
(include_subdirs unqualified)
