(library
  (name App)
  (wrapped false)
  (libraries
    bigarray
    Revery
  )
  (modules :standard \ AppExe)
)
(executable
  (package AppExe)
  (name AppExe)
  (public_name AppExe)
  (libraries
    App
    Revery
  )
  (modules AppExe)
)

(install
    (section bin)
    (package AppJs)
    (files AppExe.bc.js))

(include_subdirs unqualified)
